// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions form 1`] = `
Object {
  "type": "form",
  "value": Object {
    "type": "type",
    "visible": true,
  },
}
`;

exports[`actions messsage 1`] = `
Object {
  "type": "message",
  "value": Object {
    "content": "content",
    "type": "type",
    "visible": true,
  },
}
`;

exports[`actions next 1`] = `
Object {
  "type": "next",
}
`;

exports[`actions refresh 1`] = `
Object {
  "type": "refresh",
}
`;

exports[`actions trade 1`] = `
Object {
  "assets": Object {
    "ClassA": 234,
    "ClassB": 345,
    "ETH": 123,
  },
  "history": "test",
  "type": "trade",
}
`;
